Fixed Scaling, Back to Top Link Added sponorship logos and text should not scale down/up so much for website as well as spacing.

--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ input {
   display:flex;
   align-items: center;
   justify-content: center;
-  margin-top: 10%;
+  margin-top: 10vh;
   height: 100vh;
   width: 100%;
 }
